# CustomOperators

./: README.md  tutorial.md
CuctomOperator/ort_custom_op/: CMakeLists.txt  custom_op.cc  custom_op.h  custom_op_test.cc
CuctomOperator/pytorch_custom_op/: custom_group_norm.cpp  export_custom_op.py  model.onnx
CustomOperator/ort_custom_op/: CMakeLists.txt  custom_op.h  custom_op_test.cc
CustomOperator/pytorch_custom_op/: export_custom_op.py  model.onnx
